2003-06-28  Till Kamppeter <till.kamppeter@gmx.net>

	* makeMan.in: Removed this file as foomatic-db has no man pages.

2003-05-28  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Minolta-magicolor_2300_DL.xml, opt/foo2zjs-Duplex.xml:
	  Added auto-detection info for the Minolta magicolor 2300 DL and
	  fixed a bug in the "Duplex" option of the "foo2zjs" driver
	  (thanks to Rick Richardson for the patch).

	* printer/Minolta-magicolor_2200_DL.xml,
	  printer/Minolta-magicolor_2300_DL.xml: Added information about
	  unprintable margins (thanks to Rick Richardson for the patch).

	* printer/Generic-OAKT_Printer.xml: Added generic OAKT printer.

2003-05-26  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-DeskJet_450.xml: Updated text and added instructions
	  for head alignment.

2003-05-21  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-DeskJet_450.xml, printer/HP-Business_Inkjet_2200.xml,
	  printer/HP-Business_Inkjet_2230.xml,
	  printer/HP-Business_Inkjet_2250.xml,
	  printer/HP-Business_Inkjet_2250TN.xml,
	  printer/HP-Business_Inkjet_2280.xml, printer/HP-2500C.xml,
	  printer/HP-2000C.xml, printer/HP-DesignJet_ColorPro_CAD.xml:
	  Updated text for printers without paper type sensor.

	* printer/HP-DeskJet_450.xml, printer/HP-DeskJet_5550.xml,
	  printer/HP-DeskJet_5551.xml, printer/HP-OfficeJet_6105.xml,
	  printer/HP-OfficeJet_6110.xml, printer/HP-PhotoSmart_7345.xml,
	  printer/HP-PhotoSmart_7350.xml, printer/HP-PhotoSmart_7550.xml,
	  printer/HP-PSC_2110.xml, printer/HP-PSC_2150.xml,
	  printer/HP-PSC_2210.xml: Added remark that full-bleed only works
	  on Oufuku-Hagaki and smaller paper sizes.
	
2003-05-19  David Suffield <david.suffield@hp.com>

	* printer/HP-PSC_1200.xml, HP-PSC_1110.xml, HP-PSC_1100.xml,
	  HP-OfficeJet_6105.xml, HP-OfficeJet_5105.xml,
	  HP-DeskJet_9300.xml HP-OfficeJet_5110.xml,
	  HP-OfficeJet_5110xi.xml, HP-OfficeJet_6110.xml HP-PSC_1205.xml,
	  HP-PSC_1210.xml: Added/updated HP PSC 1100 series, PSC 1200,