@@ -1,0 +1,95 @@
+<printer id="printer/HP-PSC_2175">
+  <make>HP</make>
+  <model>PSC 2175</model>
+  <mechanism>
+    <inkjet/>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>4800</x>
+        <y>1200</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>One Color(CMY) + one Black(K) or Photo (cmK)</en>
+      </comments>
+    <!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url>http://h20015.www2.hp.com/en/product.jhtml?lc=en&amp;pagetype=hppsc2175v90815</url>
+  <lang>
+    <pcl level="3"/><!--no pjl-->
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+    <general>
+      <ieee1284>MFG:Hewlett-Packard;MDL:PSC 2175 Series;CMD:MLC,PCL,PML,DW-PCL,DYN;CLS:PRINTER;</ieee1284>
+      <manufacturer>Hewlett-Packard</manufacturer>
+      <model>PSC 2175 Series</model>
+      <commandset>MLC,PCL,PML,DW-PCL,DYN</commandset>
+    </general>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>hpijs</driver>
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+    Multi-function device: Printing, scanning, copying, photo
+    card access.&lt;p&gt;
+
+    Seems to be the same as the japanese-market PSC 2150.&lt;p&gt;
+
+    The best printout quality you will get with the &quot;hpijs&quot;
+    driver, provided by &lt;a
+    href=&quot;http://hpinkjet.sourceforge.net/&quot;&gt;HP&lt;/a&gt;
+    (compatible to the HP DeskJet 990C), especially the 1200-dpi high
+    resolution mode gives excellent photo quality (the rendered bitmap
+    is 1200x1200 dpi, but the printer hardware does an interpolation
+    then and prints with the printer&apos;s highest resolution). Also
+    the GIMP-Print driver is reported to work (Model setting:
+    &quot;pcl-900&quot;).&lt;p&gt;
+
+    When used with HP&apos;s &quot;hpijs&quot; driver, this printer
+    auto-detects the paper type and ink cartridge type and does
+    appropriate dithering and colour adjustment internally, controlled
+    by the hardware. So when GhostScript with the &quot;hpijs&quot;
+    driver only renders the image with 300 or 600 dpi, higher
+    resolutions are used for the internal dithering. So if you insert
+    photo paper, the printer will print in photo quality, no paper
+    type choice in the driver&apos;s options is needed. There is also
+    a special high resolution mode where the image is rendered in 1200
+    dpi and interpolated to 4800x1200 dpi by the hardware, without
+    paper detection, intended for photo paper only.&lt;p&gt;
+
+    Border-less (full bleed) printing on paper sizes up to
+    Oufuku-Hagaki is supported with the &quot;hpijs&quot;
+    driver.&lt;p&gt;
+
+    Scanning works using the &lt;a
+    href=&quot;http://hpoj.sourceforge.net/&quot;&gt;HPOJ&lt;/a&gt;
+    low-level driver together with its &lt;a
+    href=&quot;http://panda.mostang.com/sane/&quot;&gt;SANE&lt;/a&gt;
+    backend &quot;hpoj&quot;.&lt;p&gt;
+
+    In addition this device copies and prints photos directly
+    from CompactFlash, SmartMedia, and Memory Stick, but these
+    functions are currently only controllable by the front panel, not
+    by the PC. To choose photos from your memory card, the machine
+    makes an index sheet with thumbnails of all photos and you can
+    mark which photos you want to print and how they should get
+    printed with a pen on the sheet and then you scan the sheet to
+    execute the printing job.&lt;p&gt;
+
+    Up/downloading of photos between the PC and the printer/memory
+    card works both via the standard USB mass storage interface
+    (mounted as a file system, kernel module &quot;usb-storage&quot;)
+    or also with &lt;a
+    href=&quot;http://hpoj.sourceforge.net/&quot;&gt;HPOJ&lt;/a&gt;.&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
+
+
