@@ -1,4 +1,7 @@
-2003-06-28  Till Kamppeter <till.kamppeter@gmx.net>
+2003-06-26  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/HP-PSC_2175.xml: Added the HP PSC 2175 multi-function
+	  device.
 
 	* makeMan.in: Removed this file as foomatic-db has no man pages.
 
